bug do text align

--- a/aula12.ex/ex014/style.css
+++ b/aula12.ex/ex014/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 header{
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
 
 }
